@@ -6,7 +6,7 @@ package-depth = @package_depth@
 
 USER_CFLAGS = @CFLAGS@
 USER_CXXFLAGS = @CXXFLAGS@ @CPPFLAGS@ @GUILE_CFLAGS@
-USER_LDFLAGS = @GUILE_LDFLAGS@
+USER_LDFLAGS = @LDFLAGS@ @GUILE_LDFLAGS@
 
 CC = @CC@
 CXX = @CXX@
